# parameters_manager_ms

./: .gitignore  .rustfmt.toml  Cargo.toml  Dockerfile  dockerfile  package-lock.json  package.json  readme.md
configs/: server.json
docker_compose/: parameters_manager_ms.build.yaml
hooks/: pre-commit.sh
src/: main.rs
src/common_modules/: mod.rs
src/common_modules/configs/: mod.rs  server_reader.rs  server_schema.rs
src/common_modules/logger/: logger.rs
src/configs/: mod.rs
src/configs/readers/: server.rs
src/configs/schemas/: server.rs
