[package]
name = "users_crud_api_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# ** info: project basic dependencies
cargo-modules = "0.6.0"

# ** info: actix dependencies
# todo: dis comment this when the dependency is going to be used on the app
# actix-web-validator = "5.0.1"
# actix = "0.13.0"

# ** info: logging dependencies
env_logger = "0.10.0"
log = "0.4.17"

# ** info: formatter dependencies
rustfmt = "0.10.0"

# ** info: env dependencies
dotenvy = "0.15"

# ** info: postgres databse dependencies
# todo: dis comment this when the dependency is going to be used on the app
# diesel = { version = "2.0.0", features = ["postgres"] }

# ** info: json dependencies
serde_json = "1.0.89"
serde = "1.0.147"
