[package]
name = "parameters_manager_ms"
version = "0.0.0"
description = "A simple parameterization microservice based on Rust."
authors = ["joseesco24 <josed.escobar@outlook.com>"]
readme = "readme.md"
edition = "2021"

[dependencies]
cargo-modules = "0.12.0"
# actix-web-validator = "5.0.1"
# actix = "0.13.0"
env_logger = "0.10.1"
log = "0.4.20"
dotenvy = "0.15"
# diesel = { version = "2.0.0", features = ["postgres"] }
serde_json = "1.0.108"
serde = "1.0.193"

[dev-dependencies]
cargo-upgrades = "2.0.0"
cargo-edit = "0.12.2"
rustfmt = "0.10.0"
clippy = "0.0.302"
